# llm-router

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  Containerfile  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  otel-collector-config.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
agent-policies/: default.yaml
config/: runtime.history.yaml  runtime.yaml
configs/: alert_rules.yml  prometheus.yml
docs/: CONTAINER-GUIDE.md  VISUALIZATION-GUIDE.md  devops-monitoring.md
pi/skills/: llm-router-monitor.yaml
profiles/: local.yaml  models.yaml  remote.yaml
scripts/: README.md  container-build.sh  container-compose.sh  container-run.sh
src/llm_router/: __init__.py  config.py  logging_setup.py  main.py  models.py  router.py  security.py
src/llm_router/guardrails/: __init__.py  abuse_filter.py  content_safety.py  pii_filter.py  rate_limiter.py
src/llm_router/pool/: __init__.py  base.py  circuit_breaker.py  local.py  pool.py  remote.py
src/llm_router/routing/: __init__.py  base.py  complexity.py  hybrid.py  policy.py  round_robin.py  session_affinity.py
tests/: conftest.py  test_config.py  test_imports.py  test_models.py  test_router.py  test_runtime_admin.py  test_security.py
tests/test_guardrails/: __init__.py  test_guardrails_abuse_filter.py  test_guardrails_content_safety.py  test_guardrails_pii_filter.py  test_guardrails_rate_limiter.py
tests/test_pool/: __init__.py  test_circuit_breaker.py  test_pool_base.py  test_pool_local.py  test_pool_pool.py  test_pool_remote.py
tests/test_routing/: __init__.py  test_routing_base.py  test_routing_complexity.py  test_routing_hybrid.py  test_routing_policy.py  test_routing_round_robin.py  test_session_affinity.py
tests/test_server/: test_server.py
tests/test_tracing/: test_tracing.py
(+11 files in other folders)
