[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-router"
version = "0.1.0"
description = "Policy-based LLM gateway & router with guardrails and OpenTelemetry tracing"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "TBD", email = "tbd@example.com"},
]
keywords = ["llm", "router", "gateway", "langchain", "guardrails", "otel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain>=1.3.9",
    "langchain-openai>=1.3.5",
    "langchain-community>=0.3.31",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.34.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "aiofiles>=25.1.0",
    "pydantic-yaml>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "httpx2>=0.1.0",
    "respx>=0.22.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
llm-router = "llm_router.main:main"
llm-router-server = "llm_router.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["llm_router"]
